# seg_camisetas

./: .gitignore  app.py  db.py  pyproject.toml
data/: db.json
views/: control_deudores.py  control_stock.py  panel.py  registrar_ventas.py
