[project]
name = "seguimiento-camisetas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "streamlit>=1.28",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "gspread>=5.8.0,<6",
    "google-auth>=2.20.0",
    "st-gsheets-connection>=0.1.0",
]

